# try_fastapi_sqlalchemy_strawberry

./: .gitignore  README.md  pyproject.toml
app/: auth.py  crud.py  database.py  graphql_schema.py  main.py  models.py  schemas.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: HeaderNav.tsx
frontend/src/context/: AuthContext.tsx
